[project]
name = "tggs2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-texttospeech>=2.25.1",
    "google-generativeai>=0.8.4",
    "keyboard>=0.13.5",
    "numpy>=2.2.4",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "python-dotenv>=1.1.0",
    "sounddevice>=0.5.1",
    "wave>=0.0.2",
]
